--- a/DAY-4-WEEK-3-ADV-PYTHON-REGEX(BLANK) (1).ipynb
+++ b/DAY-4-WEEK-3-ADV-PYTHON-REGEX(BLANK) (1).ipynb
@@ -366,6 +366,36 @@
     "my_emails = [\"jordanw@codingtemple.orgcom\", \"pocohontas1776@gmail.com\", \"helloworld@aol..com\",\n",
     "             \"yourfavoriteband@g6.org\", \"@codingtemple.com\"]\n",
     "\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "def extract_domain(email):\n",
+    "    \n",
+    "    email_pattern = r'^[\\w\\.-]+@[\\w\\.-]+\\.\\w+$'\n",
+    "\n",
+    "    \n",
+    "    match = re.match(email_pattern, email)\n",
+    "\n",
+    "    if match:\n",
+    "        \n",
+    "        return email.split('@')[1]\n",
+    "    else:\n",
+    "        \n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "email1 = \"jordanw@codingtemple.orgcom\"\n",
+    "email2 = \"pocohontas1776@gmail.com\"\n",
+    "email3 = \"helloworld@aol..com\"\n",
+    "email4 = \"yourfavoriteband@g6.org\"\n",
+    "email5 = \"@codingtemple.com\"\n",
+    "\n",
+    "print(\"Domain 1:\", extract_domain(email1))  \n",
+    "print(\"Domain 2:\", extract_domain(email2))  \n",
+    "print(\"Domain 3:\", extract_domain(email3))  \n",
+    "print(\"Domain 4:\", extract_domain(email4)) \n",
+    "print(\"Domain 5:\", extract_domain(email5)) \n",
+    "\n",
     "# You can also use the $ at the end of your compile expression -- this stops the search\n",
     "\n",
     "#.com OR .org => com|org\n",
